applications/main-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
  name: main-ingress
spec:
  tls:
  - hosts:
    - app1.tonysm.com
    - app2.tonysm.com
    secretName: letsencrypt-staging
  rules:
    - host: app1.tonysm.com
      http:
        paths:
          - backend:
              serviceName: app1
              servicePort: 80
    - host: app2.tonysm.com
      http:
        paths:
          - backend:
              serviceName: app2
              servicePort: 80
